--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 .main-cont {
-
+    width: 80%;
+    margin: auto;
+    height: 90vh;
 }
 .navcomp-cont {
     display: flex;
