--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,8 @@ body {
 }
 .navcomp-img {
     height: auto;
-    width: 300px;
+    width: 200px;
+    margin-top: -6px;
 }
 .navcomp-li {
     list-style: none;
