--- a/public/css/app.css
+++ b/public/css/app.css
@@ -127,7 +127,7 @@ span {
 }
 
 .goat-photo {
-    max-height: 60%;
+    max-height: 60vh;
     width: auto;
     border-radius: 1%;
 }
@@ -143,4 +143,29 @@ span {
     margin-left: 3rem;
     padding: 1rem;
     min-width: 60%;
+}
+
+.artist-image-show {
+    max-height: 80vh;
+    width: auto;
+}
+
+.artist-image-search {
+    height: auto;
+    max-width: 30%
+}
+
+.results-search-title {
+    text-align: center;
+}
+
+.center-the-cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.artist-stat {
+    font-size: 3rem;
+    color: rgb(39, 39, 39);
 }
